--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nextui-org/react": "^2.2.10",
     "@rainbow-me/rainbowkit": "^2.0.2",
     "@tanstack/react-query": "^5.22.2",
+    "framer-motion": "^11.0.13",
     "next": "^14.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -20,8 +22,11 @@
   "devDependencies": {
     "@types/node": "^18.19.3",
     "@types/react": "^18.2.64",
+    "autoprefixer": "^10.4.18",
     "eslint": "^8.15.0",
     "eslint-config-next": "^14.1.3",
+    "postcss": "^8.4.35",
+    "tailwindcss": "^3.4.1",
     "typescript": "^5.0.4"
   }
 }
