--- a/package.json
+++ b/package.json
@@ -22,9 +22,18 @@
   "devDependencies": {
     "@types/node": "^18.19.3",
     "@types/react": "^18.2.64",
+    "@typescript-eslint/eslint-plugin": "^7.2.0",
+    "@typescript-eslint/parser": "^7.2.0",
     "autoprefixer": "^10.4.18",
     "eslint": "^8.15.0",
+    "eslint-config-airbnb": "^19.0.4",
     "eslint-config-next": "^14.1.3",
+    "eslint-config-standard-with-typescript": "^43.0.1",
+    "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-plugin-import": "2.25.3",
+    "eslint-plugin-jsx-a11y": "6.5.1",
+    "eslint-plugin-react": "7.28.0",
+    "eslint-plugin-react-hooks": "4.3.0",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.0.4"
