--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "export": "next export",
     "lint": "next lint"
   },
   "dependencies": {
@@ -20,11 +21,13 @@
     "wagmi": "^2.5.7"
   },
   "devDependencies": {
+    "@babel/eslint-parser": "^7.23.10",
     "@types/node": "^18.19.3",
     "@types/react": "^18.2.64",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
     "autoprefixer": "^10.4.18",
+    "babel-eslint": "^10.1.0",
     "eslint": "^8.15.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-next": "^14.1.3",
